# lib/api-spec/openapi.yaml
@@ -128,6 +128,10 @@ components:
           type: string
         projectDescription:
           type: string
+        attachedFileNames:
+          type: array
+          items:
+            type: string
       required:
         - firstName
         - lastName
@@ -171,6 +175,10 @@ components:
           type: string
         projectDescription:
           type: string
+        attachedFileNames:
+          type: array
+          items:
+            type: string
         submittedAt:
           type: string
           format: date-time
